@startuml

class User {
id
code
}

class LabelSet {
id
code
}

class Label {
id
code
name
label_set_id
}

class Job {
id
user_id
label_set_id
default_label_id
current_item_index
}

class Item {
id
uri
job_id
override_label_id
}

Label "0..n" <--> "1" LabelSet
Job "0..n" --> "1" LabelSet
Job "0..n" <--> "1" User
Job "1" <--> "0..n" Item
Job "0..n" --> "1" Label : > default
Item "0..n" --> "0..1" Label : > override

@enduml